sam-styles/packages/branding/elements/_tags.scss
/* stylelint-disable selector-no-qualifying-type -- legacy baseline (issue #735); tracked in #740 */
$info-light-alt: #9ddfeb;
$info-lighter-alt: #e7f6f8;
$info-dark-alt: #009ec1;

$error-light-alt: #fdb8ae;
$error-lighter-alt: #fdb8ae;
$error-lightest-alt: #fde0db;
$error-dark-alt: #b50909;

.usa-tag:last-of-type {
  margin-right: units(0.5);
}

// Info tags
.sds-tag--info-purple {
  @include u-bg("violet-warm-10v");
  @include u-border("indigo-warm-50");
  @include u-border("1px");
  font-weight: font-weight("semibold");
  border-radius: 0;
  @include u-text("base-darker");
}

.sds-tag--info-white {
  background-color: white;
  border: 1px solid #76766a;
  font-weight: font-weight("semibold");
  border-radius: 0;
  @include u-text("base-darker");
}

// Chip tag

.sds-tag.sds-tag--chip {
  background-color: color("primary-lighter");
  border: 1px solid color("primary");
  @include u-font("sans", "3xs");
  padding: 2px 5px;
  @include u-display("inline-flex");
  @include u-align-items("align-start");
  @include u-margin-top("05");
}

.sds-tag.sds-tag--chip .sds-tag__close {
  @include button-unstyled;
  font-size: 12px;
  margin-left: 5px;
  @include u-text("ink");
  cursor: pointer;

  &:hover {
    @include u-text("base");
  }
}

// Chip tag input
.sds-tag.sds-tag--input {
  max-width: units($theme-input-max-width);
  @include u-width("full");
  @include u-position("relative");

  .sds--tag__item {
    div:first-child,
    .sds-tag__primary-text {
      @include u-text("semibold");
    }
  }

  .sds-tag__close {
    @include u-position("absolute");
    @include u-top("05");
    @include u-right("05");
  }
}

// Status tag

.sds-tag[class*="sds-tag--status"] {
  white-space: nowrap;
  @include u-font("sans", "3xs");
  @include u-text("base-dark");
  line-height: 20px;
  font-weight: font-weight("semibold");
  padding: 0 5px 4px 0;
  border-radius: 0;
  margin-right: 5px;
  width: auto;
  display: flex;
  align-items: center;
}

// Outline tag

.sds-tag[class*="sds-tag--outline"] {
  @include u-font("sans", "3xs");
  @include u-text("base-dark");
  @include u-border("1px");
  line-height: 1rem;
  font-weight: font-weight("semibold");
  padding: 6px 7px 7px 7px;
  @include u-border("base-light");
  margin-right: 14px;
  display: flex;
  width: 128px;
  @include u-bg("base-lightest");
}

.sds-tag--outline {
  &--blue {
    @include u-border("info-dark");
  }
  &--red {
    @include u-border("error");
  }
  &--green {
    @include u-border("success");
  }
  &--gray {
    @include u-border("base-light");
  }
  &--dark-gray {
    @include u-border("base");
  }
  &--yellow {
    @include u-border("warning");
  }
  &--blue {
    @include u-border("secondary-vivid");
  }
  &--light-blue {
    @include u-border("info");
  }
  &--brown {
    @include u-border("warning-darker");
  }

  &--danger {
    @include u-border("error");
  }
  &--info {
    @include u-border("info");
  }
  &--info-lighter {
    @include u-border("info-lighter");
  }
  &--info-light {
    @include u-border("info-light");
  }
  &--info-dark {
    @include u-border("info-dark");
  }
  &--info-darker {
    @include u-border("info-darker");
  }
  &--error {
    @include u-border("error");
  }
  &--error-lighter {
    @include u-border("error-lighter");
  }
  &--error-light {
    @include u-border("error-light");
  }
  &--error-dark {
    @include u-border("error-dark");
  }
  &--error-darker {
    @include u-border("error-darker");
  }
  &--warning {
    @include u-border("warning");
  }
  &--warning-lighter {
    @include u-border("warning-lighter");
  }
  &--warning-light {
    @include u-border("warning-light");
  }
  &--warning-dark {
    @include u-border("warning-dark");
  }
  &--warning-darker {
    @include u-border("warning-darker");
  }
  &--success {
    @include u-border("success");
  }
  &--success-lighter {
    @include u-border("success-lighter");
  }
  &--success-light {
    @include u-border("success-light");
  }
  &--success-dark {
    @include u-border("success-dark");
  }
  &--success-darker {
    @include u-border("success-darker");
  }
  &--disabled {
    @include u-border("disabled");
  }
}

.sds-tag-container {
  @extend .flex-align-stretch !optional;
}

.sds-tag-container > .sds-tag:nth-child(n + 2) {
  @include u-border-top(0);
}

.sds-tag--small {
  @include u-font("sans", "3xs");
}

.sds-tag--disabled {
  @include u-bg(
    "disabled",
    !important
  ); /* stylelint-disable-line declaration-no-important */
  @include u-border(
    "disabled-dark",
    !important
  ); /* stylelint-disable-line declaration-no-important */
}

// Block style tag
div[class^="grid-col-"] .sds-tag--block,
div[class*=" grid-col-"] .sds-tag--block {
  display: block !important; /* stylelint-disable-line declaration-no-important */
  width: 100% !important; /* stylelint-disable-line declaration-no-important */
}

/*
  ----------------------------------------
  Label Title
  ----------------------------------------
  */
.sds-type--label-title {
  font-size: 14px;
  font-style: italic;
  font-weight: font-weight("thin");
  margin: 0;
  color: #5d5d52;
}

.sds-tag--light {
  @include u-bg(
    "white",
    !important
  ); /* stylelint-disable-line declaration-no-important */
  @include u-border(
    "warning",
    !important
  ); /* stylelint-disable-line declaration-no-important */
  @include u-text(
    "base-darker",
    !important
  ); /* stylelint-disable-line declaration-no-important */
}

.sds-static--tag {
  @include u-display("block");
  @include u-margin-bottom(0);
  @include u-margin-top("2px");
  @include u-margin-right(0.5);
  @include u-font("sans", "3xs");
  min-width: 52px;
  width: 52px;
}
//--------------------------------------------
//  STATUS
//--------------------------------------------

.sds-status {
  border-radius: 50%;
  @include u-width("205");
  @include u-height("205");
  @include u-bg("base-light");
  display: inline-block;
  margin: 2px 5px -0.33rem 0;
}
.sds-status--sm {
  @include u-width(1);
  @include u-height(1);
  @include u-bg("base-light");
  margin: 4px 6px 4px 4px;
}

// shape variants
// (default)
.sds-status--circle {
  border-radius: 50%;
}
.sds- .sds-status--square {
  border-radius: 0;
}

// color variants
.sds-status--red {
  @include u-bg("error");
}
.sds-status--green {
  @include u-bg("success");
}
.sds-status--gray {
  @include u-bg("base-light");
}
.sds-status--dark-gray {
  @include u-bg("base");
}
.sds-status--yellow {
  @include u-bg("warning");
}
.sds-status--blue {
  @include u-bg("secondary-vivid");
}
.sds-status--light-blue {
  @include u-bg("info");
}
.sds-status--brown {
  @include u-bg("warning-darker");
}

// state variants (used where the item shown has an implied state/status)
.sds-status--danger {
  @include u-bg("error");
}
.sds-status--info {
  @include u-bg("info");
}
.sds-status--info-lighter {
  @include u-bg("info-lighter");
}
.sds-status--info-light {
  @include u-bg("info-light");
}
.sds-status--info-dark {
  @include u-bg("info-dark");
}
.sds-status--info-darker {
  @include u-bg("info-darker");
}
.sds-status--error {
  @include u-bg("error");
}
.sds-status--error-lighter {
  @include u-bg("error-lighter");
}
.sds-status--error-light {
  @include u-bg("error-light");
}
.sds-status--error-dark {
  @include u-bg("error-dark");
}
.sds-status--error-darker {
  @include u-bg("error-darker");
}
.sds-status--warning {
  @include u-bg("warning");
}
.sds-status--warning-lighter {
  @include u-bg("warning-lighter");
}
.sds-status--warning-light {
  @include u-bg("warning-light");
}
.sds-status--warning-dark {
  @include u-bg("warning-dark");
}
.sds-status--warning-darker {
  @include u-bg("warning-darker");
}
.sds-status--success {
  @include u-bg("success");
}
.sds-status--success-lighter {
  @include u-bg("success-lighter");
}
.sds-status--success-light {
  @include u-bg("success-light");
}
.sds-status--success-dark {
  @include u-bg("success-dark");
}
.sds-status--success-darker {
  @include u-bg("success-darker");
}
.sds-status--disabled {
  @include u-bg("disabled");
}
.sds-status--indigo-warm {
  @include u-bg("indigo-warm-30v");
}
.sds-status--gold-dark {
  @include u-bg("gold-70");
}

//Roadmap tags
.label-done {
  @extend .roadmap-label;
  @include u-bg("primary");
  @include u-text("ink");
  font-weight: 700;
}

.label-in-progress {
  @extend .roadmap-label;
  @include u-bg("warning");
  @include u-text("ink");
  font-weight: 700;
}

.label-upcoming {
  @extend .roadmap-label;
  @include u-text("base");
  @include u-border("base");
  border-width: 1px;
  border-style: solid;
  background-color: transparent;
}

.roadmap-label {
  line-height: 1.5;
  margin-left: 0.75rem;
  text-decoration: none;
}

.sds-tag-right-align {
  position: absolute;
  top: 12px;
  right: 12px;
  z-index: 10;
  @media (max-width: 1000px) {
    position: static;
    display: block;
    text-align: center;
  }
}

.sds-status-tag {
  @include u-font("sans", "3xs");
  @include u-text("normal");
  padding: 6px 10px;
  margin: 8px;
  border-radius: 99rem;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 1px solid transparent;
  @media (max-width: 1000px) {
    width: 100%;
    max-width: none;
    border-radius: 4px 4px 0 0;
    margin: 0;
  }

  &--info {
    background-color: $info-lighter-alt;
    border-color: $info-light-alt;
  }

  &--error {
    background-color: $error-lightest-alt;
    border-color: $error-light-alt;
  }

  &--accent-cool {
    @include u-bg("accent-cool-lighter");
    @include u-border("accent-cool");
  }
  &--locked {
    background-color: #e5e5e5;
    @include u-border("base-light");
    i {
      margin-right: 8px;
    }
  }
  &--primary-lighter {
    @include u-bg("primary-lighter");
    @include u-border("primary");
  }
}

